--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Studio de Pilates</title>
+        <!--meta social-->
+         <meta property="og:url"           content="https://fabiogarciabr.github.io/pilates.html" />
+		<meta property="og:type"          content="website" />
+		<meta property="og:title"         content="Studio Eliane Barbieri" />
+		<meta property="og:description"   content="landing page Eliane Barbieri" />
+		<meta property="og:image"         content= https://fabiogarciabr.github.io/Fgcelulares/imagens/footer.png />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="imagens/icone1.ico" />
         <!-- Font Awesome icons (free version)-->
