--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@
                     line-height: 40px;
                     padding: 10px 20px;
                 }
-                .carousel-item >img{
+              .carousel-item >img{
                     height: 70%;
                     width: 70%;
-                    display: flex;
+                    display: block;
+                    margin: 0 auto;
                     padding: 0 2%;
                 }
 
@@ -178,9 +179,7 @@
                     .carousel-item >img{
                     max-height: 90%;
                     max-width: 90%;
-                    display: flex;
-                    margin-left: 5%;
-                    }
+                   }
                    
                 }
             </style>
