--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:title"         content="Studio Eliane Barbieri" />
 	<meta property="og:description"   content="Landing Page Eliane Barbieri" />
 	<meta property="og:image"         content= https://fabiogarciabr.github.io/pilates/imagens/footer.png />
-        <!-- Favicon-->
+        <!-- icon -->
         <link rel="icon" type="image/x-icon" href="imagens/icone1.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -410,7 +410,7 @@
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-        <<!--modal/carousel-->
+        <!-- modal/carousel -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
