--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="Studio Eliane Barboeri" content="" />
+        <meta name="Fabio Garcia" content="fabiogarciabr.github" />
         <title>Studio de Pilates</title>
         <!--meta-social-->
         <meta property="og:url"           content="https://fabiogarciabr.github.io/pilates.html" />
@@ -266,7 +266,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="imagens/lica.jpg" alt="..." />
                             <h4>Eliana Barbieri</h4>
-                            <p class="text-muted">Educadora Física</p>
+                            <p class="text-muted">Acupuntura</p>
                                 <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/lica.barbieri" aria-label="Lica Barbieri Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             
                         </div>
