--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="Studio Eliane Barboeri" content="" />
+        <meta name="Studio Eliane Barbieri" content="Studio Pilates" />
         <meta name="Fabio Garcia" content="fabiogarciabr.github" />
         <title>Studio de Pilates</title>
         <!--meta-social-->
