--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
         </section>
 
     <!--Style carousel-->
+	    
+	    <!-- botao flutuante-->
+		     <a href="tel:199996602550" class="botao-flutuante">
+			    <img src="imagens/telephone-outbound.svg"></img>
+			    </a>
+
 
             <style type="text/css">
 
@@ -174,6 +180,19 @@
                     margin: 0 auto;
                     padding: 0 2%;
                 }
+		 .botao-flutuante {
+                  position: fixed;
+                  bottom: 20px;
+                  right: 20px;
+                  background: linear-gradient(90deg,#253692,#0a1551);
+                  color: #fff;
+                  padding: 10px 20px;
+                  border-radius: 50%;
+                  text-align: center;
+                  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+                  z-index: 9999;
+                  font-size: 30px;
+                  }
 
                 @media screen and (max-width: 768px){
                     .carousel-item >img{
