--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                                         <div class="carousel-item">
                                           <img class="d-block w-100" src="imagens/img3.jpg" alt="Third slide">
                                         </div>
+					 <div class="carousel-item">
+                                          <img class="d-block w-100" src="imagens/promo2.jpg" alt="four slide">
+                                        </div>
                                       </div>
                                       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
