--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header style="width: 100%; height: 500px;" class="masthead">
+        <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">Seja Bem Vindo!</div>
                
