--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">Sobre</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Equipe</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
+			    <li class="nav-item"><a class="nav-link" href="#cadastro.html">Cadastro</a></li>
                     </ul>
                 </div>
             </div>
